再次尝试修复上一个问题
补充：有些浏览器容错性较低，不能将image容错为Image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LMQ</title>
     <link rel="stylesheet" href="jemdoc.css" type="text/css" />
-    <link rel="shortcut icon" href="image/ff0.jpg" type="image/jpg" />
+    <link rel="shortcut icon" href="Image/ff0.png" type="Image/png" />
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <table class="imgtable">
             <tr>
                 <td>
-                    <img src="image/ff0.jpg" width="120px" />
+                    <img src="image/ff0.png" width="120px" />
                 </td>
                 <td>
                     <p>本科生；<br>
@@ -84,14 +84,14 @@
         <h2>常用技术交流社区</h2>
         <table class="imgtable">
             <tr>
-                <td><a href="https://www.csdn.net/" title="CSDN"><img src="image/CSDN.jpg" /></a></td>
-                <td><a href="https://www.cnblogs.com/"><img src="image/博客园.jpg" /></a></td>
-                <td><a href="https://juejin.cn/"><img src="image/稀土掘金.jpg" /></a></td>
+                <td><a href="https://www.csdn.net/" title="CSDN"><img src="Image/CSDN.png" /></a></td>
+                <td><a href="https://www.cnblogs.com/"><img src="Image/博客园.png" /></a></td>
+                <td><a href="https://juejin.cn/"><img src="Image/稀土掘金.png" /></a></td>
             </tr>
         </table>
 
         <h3>《这个头像是ff0》</h3>
-        <p><a href="image/ff0.txt" type="image/txt">
+        <p><a href="Image/ff0.txt" type="Image/txt">
                 <b>你想知道更多吗？</b><br>&emsp;&emsp;
                 <img src="Image/QQ截图20221116124550.png" /><br>
             </a></p>
