--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LMQ</title>
     <link rel="stylesheet" href="jemdoc.css" type="text/css" />
-<<<<<<< HEAD
     <link rel="shortcut icon" href="Image/ff0.png" type="Image/png" />
-=======
-    <link rel="shortcut icon" href="image/ff0.png" type="image/png" />
->>>>>>> main
 </head>
 
 <body>
@@ -22,7 +18,7 @@
         <table class="imgtable">
             <tr>
                 <td>
-                    <img src="image/ff0.png" width="120px" />
+                    <img src="Image/ff0.png" width="120px" />
                 </td>
                 <td>
                     <p>本科生；<br>
@@ -88,15 +84,9 @@
         <h2>常用技术交流社区</h2>
         <table class="imgtable">
             <tr>
-<<<<<<< HEAD
                 <td><a href="https://www.csdn.net/" title="CSDN"><img src="Image/CSDN.png" /></a></td>
                 <td><a href="https://www.cnblogs.com/"><img src="Image/博客园.png" /></a></td>
                 <td><a href="https://juejin.cn/"><img src="Image/稀土掘金.png" /></a></td>
-=======
-                <td><a href="https://www.csdn.net/" title="CSDN"><img src="image/CSDN.png" /></a></td>
-                <td><a href="https://www.cnblogs.com/"><img src="image/博客园.png" /></a></td>
-                <td><a href="https://juejin.cn/"><img src="image/稀土掘金.png" /></a></td>
->>>>>>> main
             </tr>
         </table>
 
