小优化（先到这吧

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <title>LMQ</title>
     <link rel="stylesheet" href="jemdoc.css" type="text/css" />
@@ -23,9 +23,9 @@
                     <img src="Image/ff0.png" width="120px" />
                 </td>
                 <td>
-                    <p>本科生；<br>
+                    <p>本科生；男；<br>
                         电子信息工程专业；<br>
-                        “小白级”开发者；<br>
+                        普通开发者；<br>
                     </p>
                 </td>
             </tr>
@@ -71,13 +71,13 @@
         <h2>近期项目</h2>
         <table class="imgtable">
             <tr>
-                <td><a href="http://github.com/lmq624/51MCU-Bluetooth">使用了蓝牙模块和51单片机的通讯电路（大概？）<br>
+                <td><a href="http://github.com/lmq624/51MCU-Bluetooth">[GitHub]使用了蓝牙模块和51单片机的通讯电路（大概？）<br>
                         <p>项目开发进度：待上传至仓库</p>
                     </a></td>
 
             </tr>
             <tr>
-                <td><a href="http://github.com/lmq624/">用于描述大型计划的新文件类型及其配套桌面应用<br>
+                <td><a href="http://github.com/lmq624/">[GitHub]用于描述大型计划的新文件类型及其配套桌面应用<br>
                         <p>项目开发进度：待上传至仓库</p>
                     </a></td>
             </tr>
@@ -94,8 +94,7 @@
 
         <h3>《这个头像是ff0》</h3>
         <p><a href="Image/ff0.txt" type="Image/txt">
-                <b>你想知道更多吗？</b><br>
-                &emsp;&emsp;她的原型是中国国产手游《明日方舟》的医疗干员华法琳，设定上...
+                <b>&emsp;&emsp;你想知道更多吗？</b>她的原型是中国国产手游《明日方舟》的医疗干员华法琳，设定上...
             </a></p>
 
     </div>
