--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes" />
+        content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <title>LMQ</title>
     <link rel="stylesheet" href="jemdoc.css" type="text/css" />
@@ -26,6 +26,7 @@
                     <p>本科生；男；<br>
                         电子信息工程专业；<br>
                         普通开发者；<br>
+                        <a href="http://github.com/lmq624">[我的GtiHub项目]</a><br>
                     </p>
                 </td>
             </tr>
@@ -41,7 +42,7 @@
                         <li>
                             乐于合作交流，看重学习等过程中存在的协作或互助机制。
                         </li>
-                        <li>保持着对高科技含量电子产品相关工作原理及生产工艺的强烈好奇心</li>
+                        <li>保持着对高科技含量电子产品相关工作原理及生产工艺的强烈好奇心。</li>
                     </ol>
                     <h3>谜语人时刻</h3><br>
                     &emsp;&emsp;那位曾对我说：“合作交流者间，共商各自需求，
@@ -61,7 +62,7 @@
                     <p>&emsp;图为部分工程软件截图</p>
                 </td>
                 <td>
-                    <p>&emsp;&emsp;已掌握(编译型语言)C、C++基础知识体系，已初步掌握解释型语言Python、标记语言如XML、HTML、MarkDown的基础语法</p><br>
+                    <p>&emsp;&emsp;已掌握(编译型语言)C、C++基础知识体系，已初步掌握解释型语言Python、标记语言如XML、HTML、MarkDown的基础语法。</p><br>
                     <p>&emsp;&emsp;能够使用keil5、Qt5.14.2、VS
                         2022开发<b>简易嵌入式应用</b>、<b>简易桌面应用</b>或者<b>简易安卓APP</b>，已入门Multisim，勉强入门SolidWork。</p>
                 </td>
@@ -92,7 +93,7 @@
             </tr>
         </table>
 
-        <h3>《这个头像是ff0》</h3>
+        <h2>《这个头像是ff0》</h2>
         <p><a href="Image/ff0.txt" type="Image/txt">
                 <b>&emsp;&emsp;你想知道更多吗？</b>她的原型是中国国产手游《明日方舟》的医疗干员华法琳，设定上...
             </a></p>
