a标签新增属性target

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p>本科生；男；<br>
                         电子信息工程专业；<br>
                         普通开发者；<br>
-                        <a href="http://github.com/lmq624">[我的GtiHub项目]</a><br>
+                        <a href="http://github.com/lmq624" target="_blank">[我的GtiHub项目]</a><br>
                     </p>
                 </td>
             </tr>
@@ -72,15 +72,17 @@
         <h2>近期项目</h2>
         <table class="imgtable">
             <tr>
-                <td><a href="http://github.com/lmq624/51MCU-Bluetooth">[GitHub]使用了蓝牙模块和51单片机的通讯电路（大概？）<br>
+                <td><a href="http://github.com/lmq624/51MCU-Bluetooth"
+                        target="_blank">[GitHub]使用了蓝牙模块和51单片机的通讯电路（大概？）<br>
                         <p>项目开发进度：待上传至仓库</p>
                     </a></td>
-                <td><a href="http://github.com/lmq624/Plans-Execution">[GitHub]用于描述大型计划的新文件类型及其配套桌面应用<br>
+                <td><a href="http://github.com/lmq624/Plans-Execution"
+                        target="_blank">[GitHub]用于描述大型计划的新文件类型及其配套桌面应用<br>
                         <p>项目开发进度：待上传至仓库</p>
                     </a></td>
             </tr>
             <tr>
-                <td><a href="http://github.com/lmq624/">[GitHub]过滤器<br>
+                <td><a href="http://github.com/lmq624/" target="_blank">[GitHub]过滤器<br>
                         <p>项目开发进度：已上传部分代码，正在优化其GUI</p>
                     </a></td>
             </tr>
@@ -89,14 +91,14 @@
         <h2>常用技术交流社区</h2>
         <table class="imgtable">
             <tr>
-                <td><a href="https://www.csdn.net/" title="CSDN"><img src="Image/CSDN.png" /></a></td>
-                <td><a href="https://www.cnblogs.com/"><img src="Image/博客园.png" /></a></td>
-                <td><a href="https://juejin.cn/"><img src="Image/稀土掘金.png" /></a></td>
+                <td><a href="https://www.csdn.net/" title="CSDN" target="_blank"><img src="Image/CSDN.png" /></a></td>
+                <td><a href="https://www.cnblogs.com/" target="_blank"><img src="Image/博客园.png" /></a></td>
+                <td><a href="https://juejin.cn/" target="_blank"><img src="Image/稀土掘金.png" /></a></td>
             </tr>
         </table>
 
         <h2>《这个头像是ff0》</h2>
-        <p><a href="Image/ff0.txt" type="Image/txt">
+        <p><a href="Image/ff0.txt" type="Image/txt" target="_blank">
                 <b>&emsp;&emsp;你想知道更多吗？</b>她的原型是中国国产手游《明日方舟》的医疗干员华法琳，设定上...
             </a></p>
 
