--- a/index.html
+++ b/index.html
@@ -69,24 +69,7 @@
             </tr>
         </table>
 
-        <h2>近期项目</h2>
-        <table class="imgtable">
-            <tr>
-                <td><a href="http://github.com/lmq624/51MCU-Bluetooth"
-                        target="_blank">[GitHub]使用了蓝牙模块和51单片机的通讯电路（大概？）<br>
-                        <p>项目开发进度：待上传至仓库</p>
-                    </a></td>
-                <td><a href="http://github.com/lmq624/Plans-Execution"
-                        target="_blank">[GitHub]用于描述大型计划的新文件类型及其配套桌面应用<br>
-                        <p>项目开发进度：待上传至仓库</p>
-                    </a></td>
-            </tr>
-            <tr>
-                <td><a href="http://github.com/lmq624/" target="_blank">[GitHub]过滤器<br>
-                        <p>项目开发进度：已上传部分代码，正在优化其GUI</p>
-                    </a></td>
-            </tr>
-        </table>
+        <!-- <h2>近期项目</h2> -->
 
         <h2>常用技术交流社区</h2>
         <table class="imgtable">
